added favicon, opengraph, changed wording (#250)
added favicon, opengraph, changed wording

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500|Roboto:400,500" rel="stylesheet">
-    <title>Blockchain Explorer</title>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <title>æternity explorer</title>
+
+    <meta property="og:title" content="æternity explorer"/>
+    <meta property="og:site_name" content="æternity explorer"/>
+    <meta property="og:description" content="æternity blockchain explorer shows detailed information on blocks and transactions."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://explorer.aepps.com/explorer-open-graph.jpg"/>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png"/>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500|Roboto:400,500" rel="stylesheet"/>
+
   </head>
   <body>
     <noscript>
